
December 10, 1998
	Proper timestamp calculations added to ngsniffer.c and lanalyzer.c